ready shopping cart

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -172,5 +172,6 @@
     "Unauthenticated.": "Sin autenticar.",
     "white": "blanco",
     "red": "rojo",
-    "black": "negro"
+    "black": "negro",
+    "blue": "azul"
 }
