--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -160,7 +160,7 @@
     "Go to page :page": "Ir a la página :page",
     "The :element was created successfully.": "El :element fue creado con éxito.",
     "The :element was edited successfully.": "El :element fue editado con éxito.",
-
+    "The :element was successfully removed.": "El :element fue eliminado con éxito.",
     "The given data was invalid.": "Los datos proporcionados no son válidos.",
     "Not Found.": "No Encontrado.",
     "Successful authentication.": "Autenticación exitosa.",
@@ -236,5 +236,9 @@
     "categories": "categorías",
     "edit": "editar",
     "update": "actualizar",
-    "cancel": "cancelar"
+    "cancel": "cancelar",
+    "Are you sure?": "¿Estas seguro?",
+    "removing": "eliminando",
+    "You won't be able to revert this!": "¡No podrás revertir esto!",
+    "Yes, delete it!": "¡Sí, eliminalo!"
 }
